# ComfyUI_PromptStyler

./: .gitignore  .release-please-config.json  CHANGELOG.md  README.md  RELEASING.md  STYLE_REVIEW.md  STYLE_TAXONOMY.md  TECHNICAL_DOCUMENTATION.md  __init__.py  nodes.py  pyproject.toml  style_library.py
.github/workflows/: ci.yml  publish.yml  release-please.yml
styles/: styles_v1.json
styles/packs/: 10_cinema.json  20_photography.json  21_photography_alt_process.json  30_illustration.json  31_printmaking_expanded.json  32_print_reprographic.json  34_fine_art_artists.json  35_fine_art.json  36_mixed_media.json  37_street_art.json  38_decorative_arts.json  39_internet_aesthetics.json  40_graphic_design.json  41_decorative_arts_textiles.json  42_decorative_arts_material_processes.json  43_digital_craft.json  50_3d_cg.json  60_architecture_interior.json  70_fashion.json  80_product.json  90_nature.json  95_experimental.json  96_color_grades.json  97_color_grade_film_lab.json
tests/: test_promptstyler.py
tmp/pdfs/: promptstyler_app_summary.html
tools/: add_styles.py  audit_styles.py  generate_style_packs.py  sync_legacy_styles.py  validate_styles.py  version_sync.py
